feat: atualizado titulo do projeto

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>vuex2</title>
+    <title>MVVM Architectural Pattern</title>
 </head>
 <body>
 <div id="app">
